Bug 92275 - impress grinds to a total halt as images constantly swapped in
Summary: impress grinds to a total halt as images constantly swapped in
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.0.0.1 rc
Hardware: Other All
: high critical
Assignee: Not Assigned
URL:
Whiteboard: target:5.1.0 target:5.0.0.3 target:4...
Keywords:
Depends on:
Blocks:
 
Reported: 2015-06-23 14:08 UTC by Caolán McNamara
Modified: 2016-10-25 19:24 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
exampe (2.05 MB, application/vnd.oasis.opendocument.presentation-template)
2015-06-23 14:08 UTC, Caolán McNamara
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Caolán McNamara 2015-06-23 14:08:48 UTC
Created attachment 116764 [details]
exampe

This is a regression from bug #87820

Load this odp, click on the notes tab, click on slide 2, try and open file menu, grind grind and images are constantly swapped in
Comment 1 Cor Nouws 2015-06-24 08:40:07 UTC
indeed freezes the program.
Comment 2 Caolán McNamara 2015-06-29 08:21:45 UTC
And the fix for bug #87820 seems to be necessary because the images began going missing at...

commit e2eda70f2746f08376d8cdf5e5360df217335aef
Author: Jan Holesovsky <kendy@collabora.com>
Date:   Tue Feb 4 00:33:14 2014 +0100

    startcenter: fdo#72469: Thumbnails also for other file types than ODF.
    
    Change-Id: If905b2f3e51adf7e64df9385ede74368acd11771
Comment 3 Caolán McNamara 2015-06-29 10:25:21 UTC
preview image generation is fired off after document has loaded, but before graphics are due to be refreshed asynchronously.

Graphics are forcible swapped in to generate the preview, when the async swap comes in it goes "huh, its already swapped in" and because it doesn't need to swap it it doesn't trigger a repaint for the graphics.

Simplest solution looks to revert the initial fix and instead put the ActionChanged invalidate paint area into the "huh, its already loaded, no work to do then" else branch which seems safer
Comment 4 Commit Notification 2015-06-29 11:59:19 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2d196d0ee26b3840e56ec6537066a3b4a2f08691

Resolves: tdf#92275 impress grinds to a halt constant swapping images

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2015-06-29 12:33:17 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=72da6ef835982e1927fd7405bb42f403c2fee5f9&h=libreoffice-5-0

Resolves: tdf#92275 impress grinds to a halt constant swapping images

It will be available in 5.0.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2015-07-02 11:03:09 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9ecdfc2a6d912eb8edcff76e85c999a6d2acae83&h=libreoffice-4-4

Resolves: tdf#92275 impress grinds to a halt constant swapping images

It will be available in 4.4.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.