Resolves: tdf#92275 impress grinds to a halt constant swapping images

This reverts commit 6c84442f99de109b585d3ba8964deb8dcf261c0f.
"tdf#87820 Images not displayed properly in Calc"

and replaces it with an alternative solution

Change-Id: Iecb560d43767f0e41e442a307eefcdcecb7589ef
(cherry picked from commit 2d196d0ee26b3840e56ec6537066a3b4a2f08691)
(cherry picked from commit 72da6ef835982e1927fd7405bb42f403c2fee5f9)